[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seedance-2-api"
version = "0.1.0"
authors = [
  { name="Anil Matcha" },
]
description = "Python wrapper for ByteDance's Seedance 2.5 API — realistic human faces, 1080p video, less censorship, Text-to-Video, Image-to-Video, and consistent character generation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "python-dotenv",
    "mcp[cli]"
]

[tool.setuptools]
py-modules = ["seedance_api", "mcp_server"]
